--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/auth-ui-react": "^0.4.2",
     "@supabase/auth-ui-shared": "^0.1.6",
     "@supabase/supabase-js": "^2.25.0",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
@@ -20,6 +21,7 @@
     "encoding": "^0.1.13",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "jwt-decode": "^3.1.2",
     "next": "13.4.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
