--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^4.9.0",
     "react-spinner": "^0.2.7",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.0.0-rc.3",
     "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "3.3.2",
